--- a/micro-service/redis-service/src/main/resources/application.properties
+++ b/micro-service/redis-service/src/main/resources/application.properties
@@ -2,3 +2,16 @@ spring.application.name=redis-service
 server.port=8081
 eureka.client.service-url.defaultZone=http://localhost:8080/eureka
 feign.hystrix.enabled=true
+
+spring.redis.database=0
+spring.redis.host=localhost
+spring.redis.port=6379
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.min-idle=0
+
+spring.redis.lettuce.pool.max-active=18
+spring.redis.lettuce.pool.max-idle=18
+spring.redis.lettuce.pool.max-wait=-1ms
+spring.redis.lettuce.pool.min-idle=8
