--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>1.0.0</version>
     <modules>
         <module>micro-service</module>
+        <module>test-demo</module>
     </modules>
 
     <properties>
@@ -37,6 +38,14 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.54</version>
+        </dependency>
+    </dependencies>
 
     <!--注意： 这里必须要添加， 否者各种依赖有问题-->
     <repositories>
