--- a/test-demo/pom.xml
+++ b/test-demo/pom.xml
@@ -13,6 +13,7 @@
     <packaging>pom</packaging>
     <modules>
         <module>distributed-lock</module>
+        <module>future-demo</module>
     </modules>
 
 
