--- a/micro-service/redis-service/src/main/resources/application.properties
+++ b/micro-service/redis-service/src/main/resources/application.properties
@@ -6,12 +6,15 @@ feign.hystrix.enabled=true
 spring.redis.database=0
 spring.redis.host=localhost
 spring.redis.port=6379
+
+#ƒ¨»œ π”√lettuce
+spring.redis.lettuce.pool.max-active=18
+spring.redis.lettuce.pool.max-idle=18
+spring.redis.lettuce.pool.max-wait=-1ms
+spring.redis.lettuce.pool.min-idle=8
+
 spring.redis.jedis.pool.max-active=8
 spring.redis.jedis.pool.max-idle=8
 spring.redis.jedis.pool.max-wait=-1ms
 spring.redis.jedis.pool.min-idle=0
 
-spring.redis.lettuce.pool.max-active=18
-spring.redis.lettuce.pool.max-idle=18
-spring.redis.lettuce.pool.max-wait=-1ms
-spring.redis.lettuce.pool.min-idle=8
